CMROS-91 part 3 - Add client side validataion in addition to back-end validation per PR feedback

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,5 +1,5 @@
-<%= javascript_include_tag params[:controller] %>
-<%= stylesheet_link_tag params[:controller] %>
+<%= javascript_include_tag controller_name %>
+<%= stylesheet_link_tag controller_name %>
 <div class="breadcrumb">
   <ol>
     <li><a href='<%= Rails.configuration.relative_url_root %>'>Home</a></li>
