--- a/app/views/granules/descriptor_document.xml.erb
+++ b/app/views/granules/descriptor_document.xml.erb
@@ -11,7 +11,7 @@
 	xmlns:atom="http://www.w3.org/2005/Atom">
 	<os:ShortName>CMR Granules</os:ShortName>
 	<os:Description>NASA CMR Granule search using geo, time and parameter extensions</os:Description>
-	<os:Tags>CMR NASA CWIC CEOS-OS-BP-V1.1/L3 ESIP OGC granule</os:Tags>
+	<os:Tags>CMR NASA CWIC CEOS-OS-BP-V1.1/L3 ESIP OGC granule pageOffset=1 indexOffset=0</os:Tags>
 	<os:Contact><%= ENV['contact']%></os:Contact>
 	<os:Url type="application/atom+xml" rel="results"
 	  params:method="GET"
