CMROS-56 implement support for isCeos, waiting for complete list of CEOS collections IDN group

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -92,6 +92,11 @@
       </p>
 
       <p class="form-parameter">
+        <%= label_tag 'isCeos', 'CEOS collection?: ' %>
+        <%= select_tag 'isCeos', options_from_collection_for_select(true_only_types, 'id', 'name', @is_ceos_type) %>
+      </p>
+
+      <p class="form-parameter">
         <%= label_tag 'isGeoss', 'GEOSS collection?: ' %>
         <%= select_tag 'isGeoss', options_from_collection_for_select(true_only_types, 'id', 'name', @is_geoss_type) %>
         <%= submit_tag 'Search', class: 'btn btn-default btn-round' %>
