CMR-5231: Change references of echo.

--- a/app/views/home/docs.html.erb
+++ b/app/views/home/docs.html.erb
@@ -191,7 +191,7 @@
     be validated for compliance with all off the <a href="#specs-of-interest">Specifications of interest</a> by
     providing the URL
     of the OSDD to be validated to the
-    <a target="_blank" class="ext" href="http://api.echo.nasa.gov/cwic-smart/validations">CWICSmart OSDD validation
+    <a target="_blank" class="ext" href="https://opensearch-ui.earthdata.nasa.gov/validations">CWICSmart OSDD validation
       tool</a>.
   </p>
   <p>The tool will provide individual validation scores for OpenSearch features as well as an overall validation score.
@@ -207,7 +207,7 @@
       <li>
         <a target="_blank" class="ext" href="http://api.echo.nasa.gov/cwic-smart/assets/OpenSearch.xsd">OpenSearch.xsd</a>
         was developed
-        by developed by the <a target="_blank" class="ext" href="http://api.echo.nasa.gov/cwic-smart/">CWICSmart</a>
+        by developed by the <a target="_blank" class="ext" href="https://opensearch-ui.earthdata.nasa.gov/">CWICSmart</a>
         team based on an existing public domain schema at
         <a target="_blank" class="ext" href="http://weblogs.asp.net/wkriebel/archive/2008/02/04/opensearch-xsd.aspx">http://weblogs.asp.net/wkriebel/archive/2008/02/04/opensearch-xsd.aspx</a>
       </li>
@@ -230,7 +230,8 @@
     Becuase the
     <a class="ext" target="_blank" href='https://portal.opengeospatial.org/files/65168'>OGC OpenSearch extension for
       Earth Observation</a>
-    and the<a class="ext" target="_blank" href='http://www.opengeospatial.org/standards/opensearchgeo'>OGC OpenSearch
+    and the
+    <a class="ext" target="_blank" href='http://www.opengeospatial.org/standards/opensearchgeo'>OGC OpenSearch
     Geo and Time extensions</a>
     specifications are in different maturity levels, their individual RELAX NG schemas have not yet been unified into
     a single set of RELAX NG schemas that can be applied to both specifications.
