--- a/app/views/collections/descriptor_document_facets.xml.erb
+++ b/app/views/collections/descriptor_document_facets.xml.erb
@@ -15,7 +15,7 @@
 	<os:Contact><%= ENV['contact']%></os:Contact>
 	<os:Url type="application/atom+xml" rel="collection"
 	    params:method="GET"
-		template="<%= ENV['opensearch_url']%>/collections.atom?keyword={os:searchTerms?}&amp;instrument={echo:instrument?}&amp;satellite={eo:platform?}&amp;campaign={echo:campaign?}&amp;processingLevel={echo:processing_level?}&amp;sensor={echo:sensor?}&amp;boundingBox={geo:box?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;facetLimit={sru:facetLimit?}&amp;hasGranules={echo:hasGranules?}&amp;isCwic={echo:isCwic?}&amp;isGeoss={echo:isGeoss?}&amp;isCeos={echo:isCeos?}&amp;isEosdis={echo:isEosdis?}&amp;provider={echo:provider?}&amp;clientId=<%= @client_id_model.clientId %>">
+		template="<%= ENV['opensearch_url']%>/collections.atom?keyword={os:searchTerms?}&amp;instrument={echo:instrument?}&amp;satellite={eo:platform?}&amp;campaign={echo:campaign?}&amp;processingLevel={echo:processing_level?}&amp;sensor={echo:sensor?}&amp;boundingBox={geo:box?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;facetLimit={sru:facetLimit?}&amp;hasGranules={echo:hasGranules?}&amp;isCwic={echo:isCwic?}&amp;isGeoss={echo:isGeoss?}&amp;isCeos={echo:isCeos?}&amp;isEosdis={echo:isEosdis?}&amp;isFedeo={echo:isFedeo?}&amp;provider={echo:provider?}&amp;clientId=<%= @client_id_model.clientId %>">
 	    <params:Parameter name="keyword" uiDisplay="Search terms" value="{os:searchTerms}" title="Inventory with terms expressed by these search terms" minimum="0">
 	        <atom:link rel="profile" href="http://www.elasticsearch.org/guide/en/elasticsearch/reference/current/query-dsl-query-string-query.html" title="This parameter follows the elastic search free text search implementations" />
 	    </params:Parameter>
@@ -48,7 +48,10 @@
 	    <params:Parameter name="isCeos" uiDisplay="CEOS collection" value="{echo:isCeos}" title="Inventory related to CEOS">
 	      <params:Option value="true" label="Yes"/>
 	    </params:Parameter>
-      <params:Parameter name="isEosdis" uiDisplay="EOSDIS collection" value="{echo:isEosdis}" title="Inventory related to EOSDIS">
+            <params:Parameter name="isEosdis" uiDisplay="EOSDIS collection" value="{echo:isEosdis}" title="Inventory related to EOSDIS">
+	      <params:Option value="true" label="Yes"/>
+	    </params:Parameter>
+            <params:Parameter name="isFedeo" uiDisplay="FedEO collection" value="{echo:isFedeo}" title="Inventory related to FedEO">
 	      <params:Option value="true" label="Yes"/>
 	    </params:Parameter>
 	    <params:Parameter name="provider" uiDisplay="Provider" value="{echo:provider}" title="Inventory associated with a provider" minimum="0"/>
@@ -56,7 +59,7 @@
 	</os:Url>
 	<os:Url type="text/html" rel="collection"
 	    params:method="GET"
-		template="<%= ENV['opensearch_url']%>/collections.html?keyword={os:searchTerms?}&amp;instrument={echo:instrument?}&amp;satellite={eo:platform?}&amp;campaign={echo:campaign?}&amp;processingLevel={echo:processing_level?}&amp;sensor={echo:sensor?}&amp;boundingBox={geo:box?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;facetLimit={sru:facetLimit?}&amp;hasGranules={echo:hasGranules?}&amp;isCwic={echo:isCwic?}&amp;isGeoss={echo:isGeoss?}&amp;isCeos={echo:isCeos?}&amp;isEosdis={echo:isEosdis?}&amp;provider={echo:provider?}&amp;clientId=<%= @client_id_model.clientId %>">
+		template="<%= ENV['opensearch_url']%>/collections.html?keyword={os:searchTerms?}&amp;instrument={echo:instrument?}&amp;satellite={eo:platform?}&amp;campaign={echo:campaign?}&amp;processingLevel={echo:processing_level?}&amp;sensor={echo:sensor?}&amp;boundingBox={geo:box?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;facetLimit={sru:facetLimit?}&amp;hasGranules={echo:hasGranules?}&amp;isCwic={echo:isCwic?}&amp;isGeoss={echo:isGeoss?}&amp;isCeos={echo:isCeos?}&amp;isEosdis={echo:isEosdis?}&amp;isFedeo={echo:isFedeo?}&amp;provider={echo:provider?}&amp;clientId=<%= @client_id_model.clientId %>">
 	    <params:Parameter name="keyword" uiDisplay="Search terms" value="{os:searchTerms}" title="Inventory with terms expressed by these search terms" minimum="0">
 	        <atom:link rel="profile" href="http://www.elasticsearch.org/guide/en/elasticsearch/reference/current/query-dsl-query-string-query.html" title="This parameter follows the elastic search free text search implementations" />
 	    </params:Parameter>
@@ -90,6 +93,9 @@
 	      <params:Option value="true" label="Yes"/>
 	    </params:Parameter>
 	    <params:Parameter name="isEosdis" uiDisplay="EOSDIS collection" value="{echo:isEosdis}" title="Inventory related to EOSDIS">
+	      <params:Option value="true" label="Yes"/>
+	    </params:Parameter>
+	    <params:Parameter name="isFedeo" uiDisplay="FedEO collection" value="{echo:isFedeo}" title="Inventory related to FedEO">
 	      <params:Option value="true" label="Yes"/>
 	    </params:Parameter>
 	    <params:Parameter name="provider" uiDisplay="Provider" value="{echo:provider}" title="Inventory associated with a provider" minimum="0"/>
