--- a/app/views/granules/descriptor_document.xml.erb
+++ b/app/views/granules/descriptor_document.xml.erb
@@ -15,7 +15,7 @@
 	<os:Contact><%= ENV['contact']%></os:Contact>
 	<os:Url type="application/atom+xml" rel="results"
 	  params:method="GET"
-		<% if !@client_id_model.clientId.nil? && !@client_id_model.clientId.blank? -%>
+		<% if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>
 			template="<%= ENV['opensearch_url']%>/granules.atom?datasetId={echo:datasetId?}&amp;shortName=<%= @short_name %>&amp;versionId=<%= @version_id %>&amp;dataCenter=<%= @data_center %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;parentIdentifier={eo:parentIdentifier?}&amp;clientId=<%= @client_id_model.clientId %>">
 		<% else %>
 	  	template="<%= ENV['opensearch_url']%>/granules.atom?datasetId={echo:datasetId?}&amp;shortName=<%= @short_name %>&amp;versionId=<%= @version_id %>&amp;dataCenter=<%= @data_center %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;parentIdentifier={eo:parentIdentifier?}">
@@ -51,7 +51,7 @@
 	</os:Url>
 	<os:Url type="text/html" rel="results"
 	  params:method="GET"
-		<% if !@client_id_model.clientId.nil? && !@client_id_model.clientId.blank? -%>
+		<% if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>
 	  	template="<%= ENV['opensearch_url']%>/granules.html?datasetId={echo:datasetId?}&amp;shortName=<%= @short_name %>&amp;versionId=<%= @version_id %>&amp;dataCenter=<%= @data_center %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;parentIdentifier={eo:parentIdentifier?}&amp;clientId=<%= @client_id_model.clientId %>">
 		<% else %>
 	  	template="<%= ENV['opensearch_url']%>/granules.html?datasetId={echo:datasetId?}&amp;shortName=<%= @short_name %>&amp;versionId=<%= @version_id %>&amp;dataCenter=<%= @data_center %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;parentIdentifier={eo:parentIdentifier?}">
