--- a/app/views/granules/mosdac.xml.erb
+++ b/app/views/granules/mosdac.xml.erb
@@ -9,7 +9,7 @@ xmlns:params="http://a9.com/-/spec/opensearch/extensions/parameters/1.0/" 	xmlns
     <os:Tags>ISRO SAC MOSDAC dataset</os:Tags>
     <os:Contact>admin@sac.isro.gov.in</os:Contact>
     <os:Url type="application/atom+xml" rel="results" params:method="GET"
-    <% if !@client_id_model.clientId.nil? && !@client_id_model.clientId.blank? -%>
+    <% if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>
 			template="https://mosdac.gov.in/opensearch/datasets.atom?datasetId=<%= @dataset_id %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;startIndex={os:startPage?}&amp;count={os:count?}&amp;gId={gId?}&amp;clientId=<%= @client_id_model.clientId %>">
 		<% else %>
       template="https://mosdac.gov.in/opensearch/datasets.atom?datasetId=<%= @dataset_id %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;startIndex={os:startPage?}&amp;count={os:count?}&amp;gId={gId?}">
@@ -25,7 +25,7 @@ xmlns:params="http://a9.com/-/spec/opensearch/extensions/parameters/1.0/" 	xmlns
     </os:Url>
 
 	<os:Url type="application/atom+xml" rel="collection" params:method="GET"
-  <% if !@client_id_model.clientId.nil? && !@client_id_model.clientId.blank? -%>
+  <% if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>
     template="https://mosdac.gov.in/opensearch/collections.atom?keyword={os:searchTerms?}&amp;instrument={echo:instrument?}&amp;satellite={eo:platform?}&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;startIndex={os:startPage?}&amp;count={os:count?}&amp;clientId=<%= @client_id_model.clientId %>">
   <% else %>
     template="https://mosdac.gov.in/opensearch/collections.atom?keyword={os:searchTerms?}&amp;instrument={echo:instrument?}&amp;satellite={eo:platform?}&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;startIndex={os:startPage?}&amp;count={os:count?}">
