--- a/app/views/granules/usgslsi.xml.erb
+++ b/app/views/granules/usgslsi.xml.erb
@@ -6,7 +6,8 @@
                        xmlns:esipdiscover="http://commons.esipfed.org/ns/discovery/1.2/">
     <ShortName>USGS&#47;EROS OpenSearch</ShortName>
     <Description>USGS&#47;EROS OpenSearch</Description>
-    <Url type="application/atom+xml" template="https://earthexplorer.usgs.gov/opensearch/granules.atom?uid={uid}&amp;datasetName=<%= @dataset_id %>&amp;entryId={lta:entryId}&amp;startIndex={startIndex?}&amp;count={count?}&amp;timeStart={time:start?}&amp;timeEnd={time:end?}&amp;geoBox={geo:box?}&amp;clientId=cwicClient">
+    <Url type="application/atom+xml" template="https://earthexplorer.usgs.gov/opensearch/granules.atom?uid={uid}&amp;datasetName=<%= @dataset_id %>&amp;entryId={lta:entryId}&amp;startIndex={startIndex?}&amp;count={count?}&amp;timeStart={time:start?}&amp;timeEnd={time:end?}&amp;geoBox={geo:box?}<%
+      if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
         <params:Parameter name="datasetName" value="{lta:datasetName}" title="Dataset Name desired by the search client" minimum="0" maximum="1"></params:Parameter>
         <params:Parameter name="entryId" value="{lta:entryId}" title="IDN Entry ID - Can be used in place of lta:datasetName" minimum="0" maximum="1"></params:Parameter>
         <params:Parameter name="geoBox" value="{geo:box}" title="inventory which has a spatial extent overlapping this bounding box" minimum="0"/>
