CMR-6739 + CMR-6987: Reworked OSDD clientID param to be optional
* CMR-6987: Removed ClientId requirement on OSDD requests

* CMR-6987: ClientID param no longer added to OSDD link of not present

* CMR-6987: OSDD does not include clientId in template link unless present

* CMR-6987: Added tests for blank/absent clientId cases

* CMR-6987: Formatting cleanup

* CMR-6987: Updated documentation

* CMR-6739: Added conditional clientId inclusion to coll-specific OSDDs

* CMR-6739: Added tests for coll-specific OSDDs

* CMR-6987: Encapsulated blank-check for clientID into validator

* CMR-6739: Shortened unnecessary double-declaration

* CMR-6739: Added optional clientId to remaining providers, updated docs

* CMR-6987: Dropped unnecessary logs

* CMR-6987: Tests for additional provider OSDDs, small doc change

* CMR-6739+CMR-6987: Added more tests for completeness, cleaned ID insertion logic

--- a/app/views/home/docs.html.erb
+++ b/app/views/home/docs.html.erb
@@ -77,8 +77,8 @@
     <a class="ext" target="_blank" href='http://www.loc.gov/standards/sru/sru-2-0.html'>OASIS Search Retrieve via URL
       2.0 specification</a>.  When requested, facet information is added to the end of the ATOM feed in order to maintain
       the ATOM response compatibility.
-    The OSDD request requires a clientId query parameter used to uniquely identify the client as illustrated in the
-    examples below:
+    It is recommended that OSDD requests include a clientId query paramater, which is used to uniquely identify the client as
+    illustrated in the examples below:
   </p>
   <ul>
     <li>GET CMR root OSDD with a clientId = cswOpenSearchDoc:
