--- a/app/views/granules/descriptor_document.xml.erb
+++ b/app/views/granules/descriptor_document.xml.erb
@@ -15,8 +15,9 @@
 	<os:Contact><%= ENV['contact']%></os:Contact>
 	<os:Url type="application/atom+xml" rel="results"
 	  params:method="GET"
-	  template="<%= ENV['opensearch_url']%>/granules.atom?datasetId={echo:datasetId?}&amp;shortName=<%= @short_name %>&amp;versionId=<%= @version_id %>&amp;dataCenter=<%= @data_center %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;parentIdentifier={eo:parentIdentifier?}&amp;clientId=<%= @client_id_model.clientId %>">
-	  <params:Parameter name="datasetId" uiDisplay="Collection identifier" value="{echo:datasetId}" title="Inventory associated with a dataset expressed as an ID" minimum="0"/>
+	  template="<%= ENV['opensearch_url']%>/granules.atom?datasetId={echo:datasetId?}&amp;shortName=<%= @short_name %>&amp;versionId=<%= @version_id %>&amp;dataCenter=<%= @data_center %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;parentIdentifier={eo:parentIdentifier?}<%
+		 	if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
+		<params:Parameter name="datasetId" uiDisplay="Collection identifier" value="{echo:datasetId}" title="Inventory associated with a dataset expressed as an ID" minimum="0"/>
 	  <% if @short_name.nil? -%>
 	  	<params:Parameter name="shortName" uiDisplay="Collection short name" value="{echo:shortName}" title="Inventory associated with a dataset(s) expressed as a short name" minimum="0"/>
 	  <% end %>
@@ -47,8 +48,9 @@
 	</os:Url>
 	<os:Url type="text/html" rel="results"
 	  params:method="GET"
-	  template="<%= ENV['opensearch_url']%>/granules.html?datasetId={echo:datasetId?}&amp;shortName=<%= @short_name %>&amp;versionId=<%= @version_id %>&amp;dataCenter=<%= @data_center %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;parentIdentifier={eo:parentIdentifier?}&amp;clientId=<%= @client_id_model.clientId %>">
-	  <params:Parameter name="datasetId" uiDisplay="Collection identifier" value="{echo:datasetId}" title="Inventory associated with a dataset expressed as an ID" minimum="0"/>
+		template="<%= ENV['opensearch_url']%>/granules.html?datasetId={echo:datasetId?}&amp;shortName=<%= @short_name %>&amp;versionId=<%= @version_id %>&amp;dataCenter=<%= @data_center %>&amp;boundingBox={geo:box?}&amp;lat={geo:lat?}&amp;lon={geo:lon?}&amp;radius={geo:radius?}&amp;geometry={geo:geometry?}&amp;placeName={geo:name?}&amp;startTime={time:start?}&amp;endTime={time:end?}&amp;cursor={os:startPage?}&amp;numberOfResults={os:count?}&amp;offset={os:startIndex?}&amp;uid={geo:uid?}&amp;parentIdentifier={eo:parentIdentifier?}<%
+		 	if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
+		<params:Parameter name="datasetId" uiDisplay="Collection identifier" value="{echo:datasetId}" title="Inventory associated with a dataset expressed as an ID" minimum="0"/>
 	  <% if @short_name.nil? -%>
 	  	<params:Parameter name="shortName" uiDisplay="Collection short name" value="{echo:shortName}" title="Inventory associated with a dataset(s) expressed as a short name" minimum="0"/>
 	  <% end %>
